--- a/templates/common/form/select_enum.html
+++ b/templates/common/form/select_enum.html
@@ -1,5 +1,9 @@
 <div class="fr-select-group {% if form_input.errors %}fr-select-group--error{% endif %}">
-    {% if label %}
+    {% if form_input.label %}
+        <label class="fr-label" for="{{form_input.id_for_label}}">
+            {{ form_input.label }}
+        </label>
+    {% elif label %}
         <label class="fr-label" for="{{form_input.id_for_label}}">
             {{ label }}
         </label>
