--- a/templates/conventions/programme.html
+++ b/templates/conventions/programme.html
@@ -15,21 +15,21 @@
         <div class="fr-container">
             <form method="post" action="">
                 {% csrf_token %}
-                <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                     <div class="fr-col-md-12">
                         <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Nature du programme immobilier</h2> -->
 
                         <h4>Adresse du programme</h4>
 
-                        {% include "common/form/input_text.html" with form_input=form.nom label="Nom du programme" object_field="programme__nom__"|add:form.uuid.value %}
-                        {% include "common/form/input_text.html" with form_input=form.adresse label="Adresse" object_field="programme__adresse__"|add:form.uuid.value %}
+                        {% include "common/form/input_text.html" with form_input=form.nom object_field="programme__nom__"|add:form.uuid.value %}
+                        {% include "common/form/input_text.html" with form_input=form.adresse object_field="programme__adresse__"|add:form.uuid.value %}
 
                         <div class="fr-grid-row fr-grid-row--gutters">
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/input_text.html" with form_input=form.code_postal label="Code postal" object_field="programme__code_postal__"|add:form.uuid.value %}
+                                {% include "common/form/input_text.html" with form_input=form.code_postal object_field="programme__code_postal__"|add:form.uuid.value %}
                             </div>
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/input_text.html" with form_input=form.ville label="Ville" object_field="programme__ville__"|add:form.uuid.value %}
+                                {% include "common/form/input_text.html" with form_input=form.ville object_field="programme__ville__"|add:form.uuid.value %}
                             </div>
                         </div>
 
@@ -37,19 +37,19 @@
 
                         <div class="fr-grid-row fr-grid-row--gutters">
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/input_number.html" with form_input=form.nb_logements label="Nombre de logements à conventionner" object_field="programme__nb_logements__"|add:form.uuid.value %}
+                                {% include "common/form/input_number.html" with form_input=form.nb_logements object_field="programme__nb_logements__"|add:form.uuid.value %}
                             </div>
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w fr-mt-3w">
-                                {% include "common/form/input_checkbox.html" with form_input=form.anru label="ANRU" sublabel="Le programme bénéficie d'un financement ANRU" object_field="programme__anru__"|add:form.uuid.value %}
+                                {% include "common/form/input_checkbox.html" with form_input=form.anru object_field="programme__anru__"|add:form.uuid.value %}
                             </div>
                         </div>
 
                         <div class="fr-grid-row fr-grid-row--gutters">
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/select_enum.html" with form_input=form.type_habitat label="Type d'habitat" object_field="programme__type_habitat__"|add:form.uuid.value %}
+                                {% include "common/form/select_enum.html" with form_input=form.type_habitat object_field="programme__type_habitat__"|add:form.uuid.value %}
                             </div>
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/select_enum.html" with form_input=form.type_operation label="Type d'opération" object_field="programme__type_operation__"|add:form.uuid.value %}
+                                {% include "common/form/select_enum.html" with form_input=form.type_operation object_field="programme__type_operation__"|add:form.uuid.value %}
                             </div>
                         </div>
 
@@ -59,18 +59,18 @@
 
                         <div class="fr-grid-row fr-grid-row--gutters">
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/input_number.html" with form_input=form.nb_locaux_commerciaux label="Locaux commerciaux" object_field="programme__nb_locaux_commerciaux__"|add:form.uuid.value %}
+                                {% include "common/form/input_number.html" with form_input=form.nb_locaux_commerciaux object_field="programme__nb_locaux_commerciaux__"|add:form.uuid.value %}
                             </div>
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/input_number.html" with form_input=form.nb_bureaux label="Bureaux" object_field="programme__nb_bureaux__"|add:form.uuid.value %}
+                                {% include "common/form/input_number.html" with form_input=form.nb_bureaux object_field="programme__nb_bureaux__"|add:form.uuid.value %}
                             </div>
                         </div>
 
-                        {% include "common/form/input_textarea.html" with label="Autres" form_input=form.autres_locaux_hors_convention object_field="programme__autres_locaux_hors_convention__"|add:form.uuid.value %}
+                        {% include "common/form/input_textarea.html" with form_input=form.autres_locaux_hors_convention object_field="programme__autres_locaux_hors_convention__"|add:form.uuid.value %}
 
                     </div>
                 </div>
-                {% include "common/mandatory_fields_info.html" %}
+                {% include "common/required_fields_info.html" %}
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
                         {% include "common/button/next_and_save.html" with suivant='conventions:programme' convention_uuid=convention.uuid editable=editable %}
