--- a/templates/common/form/input_number.html
+++ b/templates/common/form/input_number.html
@@ -1,10 +1,15 @@
 
 {% load l10n %}
 <div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}">
-    {% if label %}
+    {% if form_input.label %}
+        <label class="fr-label" for="{{form_input.id_for_label}}">
+            {{ form_input.label }}
+            {% include "common/form/required_field.html" with form_input=form_input %}
+        </label>
+    {% elif label %}
         <label class="fr-label" for="{{form_input.id_for_label}}">
             {{ label }}
-            {% include "common/mandatory_field.html" with form_input=form_input %}
+            {% include "common/form/required_field.html" with form_input=form_input %}
         </label>
     {% endif %}
     <div class="fr-mt-1w block--row-strech" id="{{form_input.id_for_label}}_div">
