--- a/templates/common/form/input_textarea.html
+++ b/templates/common/form/input_textarea.html
@@ -3,6 +3,10 @@
         <label class="fr-label" for="{{form_input.id_for_label}}">
             {{ label }}
         </label>
+    {% elif form_input.label %}
+        <label class="fr-label" for="{{form_input.id_for_label}}">
+            {{ form_input.label }}
+        </label>
     {% endif %}
     <div class="fr-mt-1w block--row-strech" id="{{form_input.id_for_label}}_div">
         <textarea
