--- a/templates/conventions/comments.html
+++ b/templates/conventions/comments.html
@@ -27,11 +27,11 @@
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12">
                         <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Informations complémentaires</h2> -->
-                        {% include "common/form/input_upload.html" with label="Ajoutez vos commentaires à l'attention de l'instructeur" additional_informations=True form_input=form.comments form_input_files=form.comments_files object_name='convention' object_uuid=convention.uuid file_list=convention.comments_files.values textarea=True verticalDisplay=True object_field="convention__comments__"|add:form.uuid.value %}
+                        {% include "common/form/input_upload.html" with additional_informations=True form_input=form.comments form_input_files=form.comments_files object_name='convention' object_uuid=convention.uuid file_list=convention.comments_files.values textarea=True verticalDisplay=True object_field="convention__comments__"|add:form.uuid.value %}
                     </div>
                 </div>
 
-                {% include "common/mandatory_fields_info.html" %}
+                {% include "common/required_fields_info.html" %}
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
                         {% include "common/button/next_and_save.html" with suivant='conventions:comments' convention_uuid=convention.uuid editable=editable %}
