--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -38,13 +38,13 @@
                             <p>Il existe 3 types d’EDD: EDD volumétrique, EDD classique & EDD simplifié</p>
                         </div>
 
-                        {% include "common/form/input_upload.html" with label="EDD volumétrique" form_input=form.edd_volumetrique form_input_files=form.edd_volumetrique_files object_name='lot' object_uuid=convention.lot.uuid textarea=True image_only=True file_list=convention.lot.edd_volumetrique_files.values object_field="lot__edd_volumetrique__"|add:form.lot_uuid.value %}
+                        {% include "common/form/input_upload.html" with form_input=form.edd_volumetrique form_input_files=form.edd_volumetrique_files object_name='lot' object_uuid=convention.lot.uuid textarea=True image_only=True file_list=convention.lot.edd_volumetrique_files.values object_field="lot__edd_volumetrique__"|add:form.lot_uuid.value %}
 
-                        {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_volumetrique label="Mention de publication de l'EDD volumétrique" object_field="programme__mention_publication_edd_volumetrique__"|add:form.uuid.value %}
+                        {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_volumetrique object_field="programme__mention_publication_edd_volumetrique__"|add:form.uuid.value %}
 
-                        {% include "common/form/input_upload.html" with label="EDD classique" form_input=form.edd_classique form_input_files=form.edd_classique_files object_name='lot' object_uuid=convention.lot.uuid textarea=True image_only=True file_list=convention.lot.edd_classique_files.values object_field="lot__edd_classique__"|add:form.lot_uuid.value %}
+                        {% include "common/form/input_upload.html" with form_input=form.edd_classique form_input_files=form.edd_classique_files object_name='lot' object_uuid=convention.lot.uuid textarea=True image_only=True file_list=convention.lot.edd_classique_files.values object_field="lot__edd_classique__"|add:form.lot_uuid.value %}
 
-                        {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_classique label="Mention de publication de l'EDD classique" object_field="programme__mention_publication_edd_classique__"|add:form.uuid.value %}
+                        {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_classique object_field="programme__mention_publication_edd_classique__"|add:form.uuid.value %}
 
                         <h4 class="fr-mb-1w">EDD Simplifié</h4>
 
@@ -123,9 +123,9 @@
                                         {% if convention.statut != 'BROUILLON' %}
                                             {% include 'common/utils/comments_header.html' with object_name='logement_edd' %}
                                         {% endif %}
-                                        <th scope="col">Financement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col">Désignation {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col">Type {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col">Financement {% if formset.total_form_count %}{% include "common/form/required_field_star.html" %}{% endif %}</th>
+                                        <th scope="col">Désignation {% if formset.total_form_count %}{% include "common/form/required_field_star.html" %}{% endif %}</th>
+                                        <th scope="col">Type {% if formset.total_form_count %}{% include "common/form/required_field_star.html" %}{% endif %}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
 
-                {% include "common/mandatory_fields_info.html" %}
+                {% include "common/required_fields_info.html" %}
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
                         {% include "common/button/next_and_save.html" with suivant='conventions:edd' convention_uuid=convention.uuid editable=editable %}
