--- a/templates/conventions/instructeur_validation.html
+++ b/templates/conventions/instructeur_validation.html
@@ -13,13 +13,13 @@
                             <div class="fr-col-12 fr-col-md-6 fr-col-lg-4 fr-mb-2w">
                                 <div class="block--row-strech">
                                     <div class="block--row-strech-1">
-                                        {% include "common/form/input_text.html" with form_input=conventionNumberForm.prefixe_numero label="Prefix" %}
+                                        {% include "common/form/input_text.html" with form_input=conventionNumberForm.prefixe_numero %}
                                     </div>
                                     <p class="fr-mt-4w fr-ml-2w fr-h4">/</p>
                                 </div>
                             </div>
                             <div class="fr-col-12 fr-col-md-3 fr-col-lg-2 fr-pl-md-1w fr-mb-2w">
-                                {% include "common/form/input_number.html" with form_input=conventionNumberForm.suffixe_numero label="Numéro"%}
+                                {% include "common/form/input_number.html" with form_input=conventionNumberForm.suffixe_numero %}
                             </div>
                         </div>
 
