--- a/templates/settings/edit_administration.html
+++ b/templates/settings/edit_administration.html
@@ -16,9 +16,9 @@
                         <h3>Modification de l'administration ‹‹{{ form.nom.value }}››</h3>
                         <form method="post" action="">
                             {% csrf_token %}
-                            {% include "common/form/input_text.html" with form_input=form.nom label="Nom de l'administration" %}
-                            {% include "common/form/input_text.html" with form_input=form.code label="Code de l'administration" editable=request.user.is_superuser %}
-                            {% include "common/form/input_text.html" with form_input=form.ville_signature label="Ville de signature de la convention" %}
+                            {% include "common/form/input_text.html" with form_input=form.nom  %}
+                            {% include "common/form/input_text.html" with form_input=form.code editable=request.user.is_superuser %}
+                            {% include "common/form/input_text.html" with form_input=form.ville_signature %}
 
                             <button class="fr-btn fr-fi-save-line fr-btn--icon-left" type="submit">
                                 Enregistrer
